fix : icon on small screen

--- a/components/card/card.css
+++ b/components/card/card.css
@@ -133,3 +133,8 @@
     height: auto;
   }
 }
+@media screen and (max-width: 430px) {
+  .card__action-icons button:nth-child(2) {
+    display: none;
+  }
+}
